--- a/styles.css
+++ b/styles.css
@@ -18,9 +18,9 @@ body {
     background-size: cover;
 }
 
-#drag1 { background-image: url('image1.jpg'); }
-#drag2 { background-image: url('image2.jpg'); }
-#drag3 { background-image: url('image3.jpg'); }
-#drag4 { background-image: url('image4.jpg'); }
-#drag5 { background-image: url('image5.jpg'); }
-#drag6 { background-image: url('image6.jpg'); }
+#div1 { background-image: url('image1.jpg'); }
+#div2 { background-image: url('image2.jpg'); }
+#div3 { background-image: url('image3.jpg'); }
+#div4 { background-image: url('image4.jpg'); }
+#div5 { background-image: url('image5.jpg'); }
+#div6 { background-image: url('image6.jpg'); }
